# skbuild-f2py-examples

./: .gitmodules  README.md
hello-fortran/: CMakeLists.txt  setup.py
hello-fortran-cmaker/: CMakeLists.txt
hello-fortran-cmaker/hello/: __init__.py  _hello.f90
hello-fortran-cmaker/tests/: test.py
hello-fortran-dependency/: CMakeLists.txt  setup.py
hello-fortran-dependency/hello/: __init__.py  hello.py
hello-fortran-dependency/src/: goodbye.f90  hola.f90
hello-fortran-dependency/tests/: test.py
hello-fortran-numba-callbacks/: CMakeLists.txt
hello-fortran-numba-callbacks/src/: hello.f90  interfaces.f90
hello-fortran-numba-callbacks/tests/: test.py
hello-fortran/hello/: __init__.py  _hello.f90
